# stripe-rs

./: Cargo.toml
examples/: async_create_charge.rs  create_charge.rs  create_customer.rs  create_customer_with_source.rs  list_customers.rs
src/: client.rs  lib.rs  params.rs
