[workspace]
members = ["openapi"]

[package]
name = "stripe-rust" # b.c. stripe and stripe-rs were already taken
version = "0.11.0"
description = "API bindings for the Stripe v1 HTTP API"
authors = [
  "Anna Baldwin <abaldwin@developers.wyyerd.com>",
  "Kevin Stenerson <kstenerson@developers.wyyerd.com>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/wyyerd/stripe-rs"
documentation = "https://docs.rs/stripe-rust"
keywords = ["stripe", "v1", "api"]
categories = ["api-bindings"]
edition = "2018"

[badges]
travis-ci = {repository = "wyyerd/stripe-rs"}

[lib]
name = "stripe"

[features]
default = ["webhooks"]
webhooks = ["hmac", "sha2"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

futures-core-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"

reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "3cf8ede" }

serde = "1.0.79" # N.B. we use `serde(other)` which was introduced in `1.0.79`
serde_derive = "1.0.79"
serde_json = "1.0"
serde_qs = "0.4"

# Webhook support
hmac = { version = "0.6", optional = true }
sha2 = { version = "0.7", optional = true }
smol_str = "0.1.10"

#[[example]]
#name = "async_create_charge"
#required-features = ["async"]

[dev-dependencies]
lazy_static = "1.3.0"
